--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.7",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.1",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3"
   }
