--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browserslist": [
+    "defaults",
+    "not IE 11"
+  ],
   "dependencies": {
     "@anthropic-ai/sdk": "^0.70.1",
     "@tailwindcss/postcss": "^4.1.17",
