--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "next lint"
   },
   "browserslist": [
-    "defaults",
-    "not IE 11"
+    "chrome >= 80",
+    "safari >= 14",
+    "ios >= 14",
+    "firefox >= 80",
+    "edge >= 80"
   ],
   "dependencies": {
     "@anthropic-ai/sdk": "^0.70.1",
