--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.70.1",
     "@tailwindcss/postcss": "^4.1.17",
+    "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "^16.0.7",
