--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.19",
     "class-variance-authority": "^0.7.1",
     "postcss": "^8.5.6",
     "sharp": "^0.34.5",
