--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "verify-seo": "tsx scripts/verify-seo.ts",
+    "build": "npm run verify-seo && next build",
     "start": "next start",
     "lint": "next lint",
     "analyze": "ANALYZE=true next build --webpack"
@@ -40,6 +41,7 @@
     "postcss": "^8.5.6",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.17",
+    "tsx": "^4.21.0",
     "typescript": "~5.9.3"
   }
 }
